# cockpit

./: .codespellrc  .envrc  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE.md  LICENSE  MIGRATION.md  PLAN.md  README.md  SECURITY.md  TODO.md  config.example.json  conftest.py  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.githooks/: version-bump.py  version-bump.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-version-bump.yml  pr-title.yml  pre-commit.yml  publish.yml  release.yml  version-bump.yml  version-check.yml
cockpit/: __init__.py  cli.py  close.py  cockpit.py  config.example.json  focus.py  footer.py  list.py  nudge.py  repos.py  spawn.py  starship.py  statusline.py  sync.py
cockpit/claude_commands/: __init__.py  cockpit-close.md  cockpit-new.md
cockpit/defaults/: cship.toml  starship.toml
cockpit/lib/: __init__.py  cache.py  claude.py  cmux.py  codename.py  colors.py  config.py  constants.py  cship.py  daemon.py  daemon_signal.py  gh.py  git.py  github_issues.py  jira.py  linear.py  log_format.py  nudge_cli.py  nudges.py  pills.py  preflight.py  prompts.py  registry.py  release_notes.py  repos.py  slack.py  starship.py  supervisor.py  teardown_types.py  templates.py  tickets.py  tool.py  trello.py  updater.py  version.py
cockpit/orchestrators/: __init__.py  cycle.py  teardown.py
cockpit/prompts/: __init__.py  actions.txt  command_seed.txt  github_issue.txt  jira.txt  linear.txt  orphan.txt  plan_only.txt  plan_tail.txt  pr.txt  pr_action_approved.txt  pr_action_changes_requested.txt  pr_action_ci.txt  pr_action_clean.txt  pr_action_comments.txt  pr_action_conflicts.txt  pr_authority.txt  review.txt  slack_context.txt  slack_fetch.txt  trello.txt
cockpit/tui/: __init__.py  app.py
commands/: close.md  focus.md  list.md  new.md  nudge.md  repos.md  review.md  sync.md
docs/: config.md  pypi-publishing.md  state-machine.md
hooks/: cmux-idle-pill.sh  hooks.json
scripts/: claude.py  close.py  cockpit.py  cship.py  focus.py  footer.py  list.py  nudge.py  repos.py  spawn.py  starship.py  sync.py
scripts/defaults/: cship.toml  starship.toml
scripts/lib/: __init__.py  cache.py  claude.py  close_requests.py  cmux.py  colors.py  config.py  cship.py  daemon.py  daemon_signal.py  footer.py  gh.py  git.py  issue_color.py  linear.py  list.py  nudge_cli.py  nudges.py  pills.py  preflight.py  prompts.py  registry.py  repos.py  slack.py  starship.py  teardown.py  teardown_types.py  tool.py
scripts/orchestrators/: cycle.py  teardown.py
skills/: SKILL.md
tests/: asserts.py  cockpit_helpers.py  conftest.py  fixtures.py  test_apply_pills.py  test_autoclose_order.py  test_cli.py  test_close.py  test_close_no_arg.py  test_close_requests.py  test_cockpit.py  test_cockpit_sh.py  test_cship.py  test_cship_starship_e2e.py  test_defaults.py  test_detect_source.py  test_gh_pr_from_node.py  test_gh_relevant_pr_query.py  test_git_branch.py  test_git_remove_worktree.py  test_idle_loop_hook.py  test_nudges.py  test_pills.py  test_reap_workspace_orphans.py  test_registry.py  test_resolve_worktree.py  test_spawn.py  test_spawn_args.py  test_starship.py  test_starship_dispatch.py  test_startup_guards.py  test_supervisor.py  test_sync.py  test_teardown.py  test_templates.py  test_update_sh.py  test_updater.py
tests/e2e/: test_cship_starship.py  test_wheel_packaging.py
tests/lib/: _pending_test_cache_from_pills.py  conftest.py  test_cache.py  test_claude.py  test_close_requests.py  test_cmux.py  test_codename.py  test_colors.py  test_config.py  test_cship.py  test_daemon.py  test_daemon_signal.py  test_gh.py  test_git.py  test_github_issues.py  test_jira.py  test_linear.py  test_nudge_cli.py  test_nudges.py  test_pills.py  test_preflight.py  test_prompts.py  test_release_notes.py  test_run_helper.py  test_slack.py  test_starship.py  test_teardown.py  test_tickets.py  test_tool.py  test_trello.py  test_version.py
tests/orchestrators/: test_cycle.py  test_teardown.py
(+13 files in other folders)
