[project]
name = "cockpit"
version = "0"
requires-python = ">=3.12"
description = "cmux workspaces backed by git worktrees, aligned to GitHub PRs."

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "mypy==2.1.0",
    "semver==3.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
warn_unreachable = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 (line too long) is delegated to ruff-format, which cannot wrap string literals.
# The remaining long lines are in docstrings/f-strings that are intentionally verbatim.
ignore = ["E501"]
