[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cockpit"
dynamic = ["version"]
requires-python = ">=3.12"
description = "cmux workspaces backed by git worktrees, aligned to GitHub PRs."
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
cockpit = "cockpit.cli:main"

# Version is single-sourced from the plugin manifest; the pre-push hook bumps
# that file, and the wheel version follows it automatically.
[tool.hatch.version]
path = ".claude-plugin/plugin.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["cockpit"]

# The runtime update check (cockpit/lib/version.py) reads the plugin manifests
# at `parents[2]/.claude-plugin/` — which, for the installed wheel, is
# `site-packages/.claude-plugin/`. Without this the daemon (run from the
# uv-tool install, not the plugin cache) can't resolve its own version or the
# install repo, so `latest_version()` is None and the "update available"
# header is silently never shown.
[tool.hatch.build.targets.wheel.force-include]
".claude-plugin/plugin.json" = ".claude-plugin/plugin.json"
".claude-plugin/marketplace.json" = ".claude-plugin/marketplace.json"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "mypy==2.1.0",
    "semver==3.0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
warn_unreachable = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 (line too long) is delegated to ruff-format, which cannot wrap string literals.
# The remaining long lines are in docstrings/f-strings that are intentionally verbatim.
ignore = ["E501"]
