[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmux-cockpit"
version = "1.0.0"
requires-python = ">=3.12"
description = "cmux workspaces backed by git worktrees, aligned to GitHub PRs."
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
cockpit = "cockpit.cli:main"

# Version is static here and cut as a `v<version>` git tag at release; the brew
# formula pins that tag. `cockpit --version` reads it via importlib.metadata.
[tool.hatch.build.targets.wheel]
packages = ["cockpit"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "mypy==2.1.0",
    "semver==3.0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
warn_unreachable = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 (line too long) is delegated to ruff-format, which cannot wrap string literals.
# The remaining long lines are in docstrings/f-strings that are intentionally verbatim.
ignore = ["E501"]
